--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,38 @@
+#
+##This part for H2 Database
+#spring.datasource.url=jdbc:h2:mem:test2
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#
+##enabling the H2 console
+#spring.h2.console.enabled=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
 
-#This part for H2 Database
-spring.datasource.url=jdbc:h2:mem:test2
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-#enabling the H2 console
-spring.h2.console.enabled=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.show_sql=true
+##This part for MySQL Database
+#spring.datasource.url=jdbc:mysql://localhost:3336/hotel-backend
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#
+
+
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/hotel-backend   
+spring.datasource.username= postgres
+spring.datasource.password= 123456
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.properties.hibernate.format_sql= true
+spring.jpa.properties.hibernate.show_sql= true
