--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,10 @@
 			<version>1.6.2</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
