--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,3 @@
-#
-##This part for H2 Database
-#spring.datasource.url=jdbc:h2:mem:test2
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#
-##enabling the H2 console
-#spring.h2.console.enabled=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.show_sql=true
-
-
-##This part for MySQL Database
-#spring.datasource.url=jdbc:mysql://localhost:3336/hotel-backend
-#spring.datasource.username=root
-#spring.datasource.password=123456
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.show_sql=true
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-#
-
-
 
 spring.datasource.url= jdbc:postgresql://localhost:5432/hotel-backend   
 spring.datasource.username= postgres
@@ -38,3 +12,13 @@ spring.jpa.properties.hibernate.format_sql= true
 spring.jpa.properties.hibernate.show_sql= true
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+
+
+spring.mail.host=smtp-mail.outlook.com
+spring.mail.port=587
+spring.mail.username=javademo131@outlook.com
+spring.mail.password=Javax123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.protocol=smtp
